--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,7 +11,7 @@ services:
       - POSTGRES_PASSWORD=pass 
       - POSTGRES_USER=user
     volumes:
-      - ./postgres-data:/var/lib/postgresql/data
+      - ./server/postgres-data:/var/lib/postgresql/data
   
   api:
     build: ./server
