--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,3 +20,5 @@ services:
     environment:
       - POSTGRES_CONNECTION_STRING=postgresql://user:pass@database/my_db
       - NODE_ENV=production
+    depends_on:
+      - database
