--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,8 +1,8 @@
 FROM node:alpine
-COPY . /app
 WORKDIR /app
+COPY . /app
 
 ENV PORT 3003
 EXPOSE 3003
 
-CMD node server.js
+CMD ["node", "server.js"]
