readme update & .yaml db auto restart param

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,6 +14,7 @@ services:
       - pgdatasource:/var/lib/postgresql/data
       - ./server/migration.sql:/docker-entrypoint-initdb.d/migration.sql
       - ./server/seed.sql:/docker-entrypoint-initdb.d/seed.sql
+    restart: always
     
   
   api:
