--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,7 +13,7 @@ services:
       - pgdatasource:/var/lib/postgresql/data
       - ./server/migration.sql:/docker-entrypoint-initdb.d/migration.sql
       - ./server/seed.sql:/docker-entrypoint-initdb.d/seed.sql
-    
+    restart: always
   
   api:
     build: ./server
